# PVTcalc

./: .gitattributes  .gitignore  CLAUDE.md  KRASNOLEN_PVTSIM_COMPARISON_report.xlsx  README.md  ignyalin_xl_import_report.xlsx  models.json  pyproject.toml  test_notebook.ipynb
.github/workflows/: tests.yml
Saturation/: P_saturation.py
_src/Composition/: Composition.py  CompositionV2.py  PlusComponentCorrelations.py  PlusComponentCorrelationsV2.py  bips.py  component.py  component_tests.py  composition_v2_test.py
_src/CompositionalModel/: CompositionalModel.py  CompositionalModelV2.py  Variant.py
_src/EOS/: BRS_EOS_DB.py  BaseEOS.py  BrusilovskiyEOS.py  BrusilovskiyEOSV2.py  EOSFactory.py  PREOS.py  PenelouxVolumeCorrection.py  SRKEOS.py
_src/Experiments/: BaseExperiment.py  CCE.py  CCE2.py  CVD_den_v.py  DLE.py  DLE2.py  ExperimentsFacade.py  SeparatorTest.py  SeparatorTest2.py  StandardSeparation.py
_src/PhaseDiagram/: BubblePointPressure.py  CriticalPoint.py  CriticalProperties_den_v.py  DewPressure.py  PhaseDiagram_v4.py  PhaseEnvelope.py  PhaseEnvelopeFromStability.py  PhaseEnvelopeV2.py  SaturationPressure.py  SaturationPressure_den_v.py  SaturatuinPressureV2.py  new_method.py  new_methodv2.py  new_phase_diag.py
_src/PhaseStability/: BasePhaseStability.py  PhaseIdentificator.py  TwoPhaseStabilityTest.py  TwoPhaseStabilityTestV2.py  TwoPhaseStabilityTestV3.py
_src/PlusComponents/: AcentricFactor.py  CriticalPressure.py  CriticalTemperature.py  CriticalVolume.py  PlusComponentCorrelations.py  ShiftParameter.py  __init__.py  kWatson.py
_src/Utils/: BRS_EOS_DB.py  BRS_EOS_DB_V2.py  BaseClasses.py  CompositionLoader.py  Conditions.py  Constants.py  DB.json  Errors.py  Export.py  Export2.py  FluidPropertiesCalculator.py  FluidPropertiesCalculatorV2.py  Import.py  JsonDBReader.py  Logging.py  Results.py  Results2.py  ResultsViewer.py  Viscosity.py  fluid_properties.py
_src/VLE/: Flash.py  FlashResult.py  PhaseEquilibrium.py  PhaseEquilibriumNewton.py  PhaseEquilibriumNewtonV2.py  flashV2.py
calc_core/Composition/: Composition.py
docs/: AUDIT_2026-07-24.md  BACKLOG.md  GUI.md  NUMERICAL_VERIFICATION.md  PLUS_COMPONENTS.md  RELEASE_SMOKE_CHECKLIST.md  ROADMAP.md
gui/: __init__.py  __main__.py  app_state.py  calculation_coordinator.py  session.py  workspace_codec.py
tests/: conftest.py  test_compositional_model.py  test_gui_calculation_coordinator.py  test_gui_clipboard.py  test_gui_comparison.py  test_gui_composition_service.py  test_gui_e300.py  test_gui_experiment.py  test_gui_flash.py  test_gui_input_validation.py  test_gui_lab_data_service.py  test_gui_model_report_service.py  test_gui_phase_envelope.py  test_gui_project_service.py  test_gui_read_only_table.py  test_gui_session.py  test_gui_settings.py  test_gui_state.py  test_gui_theme.py  test_gui_undo.py  test_gui_view_smoke.py  test_gui_workspace_codec.py  test_model_store.py  test_persistence_safety.py  test_smoke.py
(+108 files in other folders)
