[project]
name = "pvtcalc"
version = "0.1.0"
description = "Компонентный PVT-движок (EOS Брусиловского, флэш, стандартные PVT-эксперименты)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "joblib>=1.4",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
notebook = [
    "ipykernel",
    "jupyterlab",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Тестовая сборка: пакуем _src как есть (без переименования в pvtcalc —
# это отдельное решение, см. обсуждение с автором). Импортируемое имя
# после `pip install` остаётся _src.*, распространяемое имя — pvtcalc.
[tool.setuptools.packages.find]
include = ["_src*"]

[tool.setuptools.package-data]
"_src.Utils" = ["DB.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
