[project]
name = "pvtcalc"
version = "0.1.0"
description = "Компонентный PVT-движок (EOS Брусиловского, флэш, стандартные PVT-эксперименты)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "joblib>=1.4",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
notebook = [
    "ipykernel",
    "jupyterlab",
]
gui = [
    "dearpygui>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["calc_core*", "gui*"]

[tool.setuptools.package-data]
"calc_core.Utils" = ["DB.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
