[project]
name = "pvtcalc"
version = "0.1.0"
description = "Компонентный PVT-движок (EOS Брусиловского, флэш, стандартные PVT-эксперименты)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "joblib>=1.4",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "dearpygui>=2.0",
]
notebook = [
    "ipykernel",
    "jupyterlab",
]
gui = [
    "dearpygui>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["calc_core*", "gui*"]

[tool.setuptools.package-data]
"calc_core.Utils" = ["DB.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["test_notebook.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["gui"]
explicit_package_bases = true
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
allow_redefinition = true
